--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,22 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+main {
+  min-height: 80vh;
+  max-width: 960px;
+  margin: auto;
+  background: white;
+}
+
+.navbar-header {
+  background: linear-gradient(#25523b, #25523b, #0c3823);
+  box-shadow: 0px 4px rgba(109, 140, 116, 0.5);
+  height: fit-content -10;
+}
+
+.link-text {
+  font-size: 0.75rem;
+  text-transform: capitalize !important;
 }
